fixed the odd extra space appearing at the bottom of the page and on the side of the page.

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,12 @@
-html, body, #root {
+html,
+body {
   height: 100%;
+}
+
+#root {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .App {
@@ -36,6 +43,7 @@ html, body, #root {
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
