--- a/src/components/Nav/style.css
+++ b/src/components/Nav/style.css
@@ -1,6 +1,6 @@
 .bar {
   background-color: black;
-  box-shadow: 0px 10px 8px rgb(50, 50, 50);
+  box-shadow: 0px 2px 13px 11px rgb(50, 50, 50);
   z-index: 2;
 }
 
@@ -24,11 +24,8 @@
 } */
 
 .hamburger {
-  /* float: right; */
   /* margin-right: 8vw;
    margin-top: 1vh; */
-  /* grid-column-end: 4;
-    grid-column-start: 3; */
 }
 
 .hamburger-container {
